--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,8 @@
 aiohttp==3.9.5
 asyncio==3.4.3
 beautifulsoup4==4.12.3
-chromadb==0.5.5
+# chromadb==0.5.5
 docx2txt==0.8
-flask==2.1.3
 groq==0.9.0
 langchain==0.2.8
 langchain-community==0.2.7
@@ -19,5 +18,7 @@ pdfplumber==0.11.2
 playwright==1.45.0
 python-dotenv==1.0.1
 sentence-transformers==3.0.1
-chroma-hnswlib==0.7.6  
+# chroma-hnswlib==0.7.6  
 streamlit
+chromadb==0.3.29 
+chroma-hnswlib==0.7.3
